--- a/users/templates/website/checkout.html
+++ b/users/templates/website/checkout.html
@@ -120,7 +120,10 @@ h1,h2,h3,h4,h5,h6{
         padding: 10px;
         display: none;
         margin-top: 20px;
-    }
+}
+.gothic{
+	font-family: century-gothic
+}
 
     </style>
 </head>
@@ -137,11 +140,11 @@ h1,h2,h3,h4,h5,h6{
 								<div class="menu_wrapper">
 									<nav id="menu">
 										<ul id="menu-main-menu" class="menu menu-main" >
-											<li> <a href="{% url 'index' %}"><span style="border:none;color:black">Home</span></a> </li>
+											<li class="gothic"> <a href="{% url 'index' %}"><span style="border:none;color:black">Home</span></a> </li>
 											{% comment %} <li> <a href="{% url 'about' %}"><span style="border:none;color:black">About us</span></a> </li> {% endcomment %}
-											<li> <a href="{% url 'rainwater' %}"><span style="border:none;color:black">Rain Water</span></a> </li>
-											<li> <a href="{% url 'blog' %}"><span style="border:none;color:black">Blog</span></a> </li>
-											<li> <a href="{% url 'contact_us' %}"><span style="border:none;color:black">Contact</span></a> </li>
+											<li class="gothic"> <a href="{% url 'rainwater' %}"><span style="border:none;color:black">Rain Water</span></a> </li>
+											<li class="gothic"> <a href="{% url 'blog' %}"><span style="border:none;color:black">Blog</span></a> </li>
+											<li class="gothic"> <a href="{% url 'contact_us' %}"><span style="border:none;color:black">Contact</span></a> </li>
 										</ul>
                                         
 									</nav><a class="responsive-menu-toggle " href="#"><i class="fa fa-bars" ></i></a> </div>
@@ -158,7 +161,7 @@ h1,h2,h3,h4,h5,h6{
 				{% csrf_token %}
 					<div id="shipping-info">
 						<hr>
-						<p>Shipping Information:</p> 
+						<p class="gothic">Shipping Information:</p> 
 						<hr>
 						<div class="form-field">
 							<input class="form-control" type="text" name="FirstName" placeholder="First Name.." required>
@@ -188,15 +191,15 @@ h1,h2,h3,h4,h5,h6{
 					</div>
 
 					<hr>
-						<p>Payment Method:</p>
+						<p class="gothic">Payment Method:</p>
 
 					<div class="form-field">
 						<div class="row">
 						<div class="col-sm-4">
-							<label><input type="radio" name="Radio" value="momo" required> MTN</label>
+							<label class="gothic"><input type="radio" name="Radio" value="momo" required> MTN</label>
 						</div>
 						<div class="col-sm-8">
-							<label><input type="radio" name="Radio" value="cc" required> CREDIT CARD</label>
+							<label class="gothic"><input type="radio" name="Radio" value="cc" required> CREDIT CARD</label>
 						</div>
 						</div>
 					</div>
@@ -260,20 +263,20 @@ h1,h2,h3,h4,h5,h6{
 
 		<div class="col-lg-6">
 			<div class="box-element">
-				<a  class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190; Back to Cart</a>
+				<a class="gothic  btn btn-outline-dark" href="{% url 'cart' %}">&#x2190; Back to Cart</a>
 				<hr>
-				<h3>Order Summary</h3>
+				<h3 class="gothic">Order Summary</h3>
 				<hr>
 				{% for item in items %}
 				<div class="cart-row">
 					<div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
-					<div style="flex:2"><p>{{item.product.name}}</p></div>
-					<div style="flex:1"><p>{{item.product.price}} Rwf</p></div>
-					<div style="flex:1"><p>x{{item.quantity}}</p></div>
+					<div style="flex:2"><pclass="gothic">{{item.product.name}}</pclass=></div>
+					<div style="flex:1"><pclass="gothic">{{item.product.price}} Rwf</pclass=></div>
+					<div style="flex:1"><pclass="gothic">x{{item.quantity}}</pclass=></div>
 				</div>
 				{% endfor %}
-				<h5>Items:   <b> {{order.get_cart_items}}</b></h5>
-				<h5>Total:  &nbsp; <u><b>{{order.get_cart_total|intcomma}} Rwf</b></u>  </h5>
+				<h5 class="gothic">Items:   <b class="gothic"> {{order.get_cart_items}}</b></h5>
+				<h5 class="gothic">Total:  &nbsp; <u><b class="gothic">{{order.get_cart_total|intcomma}} Rwf</b></u>  </h5>
 			</div>
 		</div>
 	</div>
@@ -284,12 +287,12 @@ h1,h2,h3,h4,h5,h6{
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h6 style="color:#7d7d7d">QUICK LINKS</h6>
+									<h6  class="gothic" style="color:#7d7d7d">QUICK LINKS</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
 									{% comment %} <p> <a href="{% url 'about' %}"> About us</a> </p> {% endcomment %}
-									<p> <a href="https://www.warwanda.com/">Service</a> </p>
-									<p> <a href="{% url 'rainwater' %}">Rainwater</a> </p>
-									<p> <a href="{% url 'login' %}">LOGIN</a> </p>
+									<p class="gothic" > <a href="https://www.warwanda.com/">Service</a> </p>
+									<p class="gothic" > <a href="{% url 'rainwater' %}">Rainwater</a> </p>
+									<p class="gothic" > <a href="{% url 'login' %}">LOGIN</a> </p>
 								</div>
 							</div>
 						</aside>
@@ -298,14 +301,14 @@ h1,h2,h3,h4,h5,h6{
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h3>Rainwater is safe water
+									<h3 class="gothic" >Rainwater is safe water
 										<br>
 										 
 									<hr class="no_line" style="margin:0 auto 20px">
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00b4e3"></i></a> </p>
+									<p class="gothic" > <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00b4e3"></i></a> </p>
 									<hr class="no_line" style="margin:0 auto 80px"> </div>
 							</div>
 						</aside>
@@ -314,11 +317,11 @@ h1,h2,h3,h4,h5,h6{
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h6 style="color:#7d7d7d">MORE INFO</h6>
+									<h6 class="gothic"  style="color:#7d7d7d">MORE INFO</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p ><a href="https://twitter.com/amazirw" style="margin-left:1px;"><i class="fa fa-twitter-square fa-2x" style="color:#00ACEE"></i> Twitter</a> </p>
-									<p><a href="https://web.facebook.com/amazirw?_rdc=1&_rdr" style="margin-left:20px;"><i class="fa fa-facebook-official fa-2x" style="color:#4267B2"></i>  Facebook</a> </p>
-									<p><a href="https://www.instagram.com/amazirw/" style="margin-left:20px;"><i class="fa fa-instagram fa-2x"></i>  Instagram</a> </p>
+									<p  class="gothic" ><a href="https://twitter.com/amazirw" style="margin-left:1px;"><i class="fa fa-twitter-square fa-2x" style="color:#00ACEE"></i> Twitter</a> </p>
+									<p class="gothic" ><a href="https://web.facebook.com/amazirw?_rdc=1&_rdr" style="margin-left:20px;"><i class="fa fa-facebook-official fa-2x" style="color:#4267B2"></i>  Facebook</a> </p>
+									<p class="gothic" ><a href="https://www.instagram.com/amazirw/" style="margin-left:20px;"><i class="fa fa-instagram fa-2x"></i>  Instagram</a> </p>
 								</div>
 							</div>
 						</aside>
@@ -336,7 +339,7 @@ h1,h2,h3,h4,h5,h6{
 		<div id="Side_slide" class="right dark" data-width="250">
 		<div class="close-wrapper"> <a href="#" class="close"><i class="icon-cancel-fine"></i></a> </div>
 		<div class="menu_wrapper"></div>
-		<div class="extras"> <a href="{% url 'shopping' %}" class="action_button" target="_blank">SHOP</a>
+		<div class="extras"> <a href="{% url 'shopping' %}" class="action_button" target="_blank" class="gothic">SHOP</a>
 			<div class="extras-wrapper"></div>
 		</div>
 	</div>
@@ -378,5 +381,7 @@ $('.validation').addClass($('.has-error').length ? 'text-danger' : 'text-success
 });
 
 </script>
+	<script src="//code.tidio.co/tuobbr5su5t5kp6r5xrhmzlbxmtvf5mv.js" async></script>
+
 </body>
 </html>
