--- a/users/templates/website/ijabo.html
+++ b/users/templates/website/ijabo.html
@@ -327,6 +327,7 @@
 	<script src="{% static "web/js/animations/animations.js" %}" ""></script>
 	<script src="{% static "web/js/translate3d.js" %}" ""></script>
 	<script src="{% static "web/js/scripts.js" %}" ""></script>
+	<script src="//code.tidio.co/tuobbr5su5t5kp6r5xrhmzlbxmtvf5mv.js" async></script>
 </body>
 
 </html>
