--- a/users/templates/website/post.html
+++ b/users/templates/website/post.html
@@ -238,6 +238,8 @@
             }
         });
     </script>
+    <script src="//code.tidio.co/tuobbr5su5t5kp6r5xrhmzlbxmtvf5mv.js" async></script>
+
 
 </body>
 
