--- a/users/templates/website/product_page.html
+++ b/users/templates/website/product_page.html
@@ -494,6 +494,9 @@ function addCookieItem(productId,inStock, action){
 
     </script>
 
+	<script src="//code.tidio.co/tuobbr5su5t5kp6r5xrhmzlbxmtvf5mv.js" async></script>
+
+
 </body>
 
 </html>
